--- a/web/index.html
+++ b/web/index.html
@@ -34,5 +34,6 @@
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBg-6S6Ns62UCPehstKSRwA_ylmygiFqoA"></script>
 </body>
 </html>
